[package]
name = "gitblob"
version = "0.1.0"
authors = ["samlh"]
edition = "2018"

[dependencies]
# http = "0.2.0"
base64 = "0.11.0"
git2 = "0.12.0"
gotham = "0.4.0"
gotham_derive = "0.4.0"
headers = "0.2.3"
hyper = "0.12.35"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
quick-error = "1.2.3"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
tracing = "0.1.13"
tracing-subscriber = "0.1.6"

[profile.release]
# debug = true
# lto = 'thin'
