[package]
name = "gitblob"
version = "0.1.0"
authors = ["samlh"]
edition = "2018"

[dependencies]
# http = "0.2.0"
base64 = "0.13.0"
flate2 = "1.0.22"
git2 = "0.13.23"
gotham = "0.6.0"
gotham_derive = "0.6.0"
headers = "0.3.5"
hyper = {version ="0.14.14", default-features = false }
lazy_static = "1.4.0"
mime_guess = "2.0.3"
quick-error = "2.0.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"

[profile.release]
# debug = true
# lto = 'thin'
